--- a/automake.html
+++ b/automake.html
@@ -2027,69 +2027,32 @@ Automake 同样会扫描这个列表来找出它必须处理的 <samp>Makefile.a
 
 <a name="index-Makefile_002eam_002c-Hello-World"></a>
 
-<p>We now turn to <samp>src/Makefile.am</samp>.  This file contains
-Automake instructions to build and install <samp>hello</samp>.
-</p>
+<p>我们现在来看 <samp>src/Makefile.am</samp>。这个文件包含构建和安装 <samp>hello</samp> 的 Automake 指令。</p>
 <div class="example">
 <pre class="example">bin_PROGRAMS = hello
 hello_SOURCES = main.c
 </pre></div>
 
-<p>A <samp>Makefile.am</samp> has the same syntax as an ordinary
-<samp>Makefile</samp>.  When <code>automake</code> processes a
-<samp>Makefile.am</samp> it copies the entire file into the output
-<samp>Makefile.in</samp> (that will be later turned into <samp>Makefile</samp> by
-<code>configure</code>) but will react to certain variable definitions
-by generating some build rules and other variables.
-Often <samp>Makefile.am</samp>s contain only a list of variable definitions as
-above, but they can also contain other variable and rule definitions that
-<code>automake</code> will pass along without interpretation.
-</p>
-<p>Variables that end with <code>_PROGRAMS</code> are special variables
-that list programs that the resulting <samp>Makefile</samp> should build.
-In Automake speak, this <code>_PROGRAMS</code> suffix is called a
-<em>primary</em>; Automake recognizes other primaries such as
-<code>_SCRIPTS</code>, <code>_DATA</code>, <code>_LIBRARIES</code>, etc. corresponding
-to different types of files.
-</p>
-<p>The &lsquo;<samp>bin</samp>&rsquo; part of the <code>bin_PROGRAMS</code> tells
-<code>automake</code> that the resulting programs should be installed in
-<var>bindir</var>.  Recall that the GNU Build System uses a set of variables
-to denote destination directories and allow users to customize these
-locations (see <a href="#Standard-Directory-Variables">Standard Directory Variables</a>).  Any such directory
-variable can be put in front of a primary (omitting the <code>dir</code>
-suffix) to tell <code>automake</code> where to install the listed files.
-</p>
-<p>Programs need to be built from source files, so for each program
-<code><var>prog</var></code> listed in a <code><span class="nolinebreak">_PROGRAMS</span><!-- /@w --></code> variable,
-<code>automake</code> will look for another variable named
-<code><var>prog</var>_SOURCES</code> listing its source files.  There may be more
-than one source file: they will all be compiled and linked together.
-</p>
-<p>Automake also knows that source files need to be distributed when
-creating a tarball (unlike built programs).  So a side-effect of this
-<code>hello_SOURCES</code> declaration is that <samp>main.c</samp> will be
-part of the tarball created by <code>make dist</code>.
-</p>
-<p>Finally here are some explanations regarding the top-level
-<samp>Makefile.am</samp>.
+<p><samp>Makefile.am</samp> 和原始的 <samp>Makefile</samp> 有相同的语法。
+当 <code>automake</code> 处理一个 <samp>Makefile.am</samp> 时，它拷贝整个文件到结果的 <samp>Makefile.in</samp>（后来将被 <code>configure</code> 转化为 <samp>Makefile</samp>）中，但是会重新处理来确定被一些构建规则和其他变量所确定的变量定义。通常 <samp>Makefile.am</samp> 仅包含像上面那样的一个变量定义列表，但是它们也可以包含其他能不需要<code>automake</code> 翻译而直接传递的变量和规则定义。</p>
+<p>以 <code>_PROGRAMS</code> 后缀结尾的变量是用来列出 <samp>Makefile</samp> 应该构建的应用程序的特殊变量。
+按照 Automake 的说法，<code>_PROGRAMS</code> 后缀被称为一个 <em>要素</em>，Automake 可以识别其他的要素， 比如 <code>_SCRIPTS</code>, <code>_DATA</code>, <code>_LIBRARIES</code>，等等，对应于不同的文件类型。</p>
+<p><code>bin_PROGRAMS</code> 中的&lsquo;<samp>bin</samp>&rsquo;部分告诉 <code>automake</code> 生成的程序应该被安装到 <var>bindir</var>。回想一下GNU构建系统使用一组变量来指示目的文件夹并且允许用户自定义这些位置。（见 <a href="#Standard-Directory-Variables">标准目录变量</a>）。
+任何这样的目录变量（删去 <code>dir</code> 前缀）都可以被放在一个要素前面来告诉 <code>automake</code> 把列出的文件安装到哪里。</p>
+<p>程序需要从源文件构建，因此对每一个列在 <code><span class="nolinebreak">_PROGRAMS</span><!-- /@w --></code> 要素中的程序 <code><var>prog</var></code> ，
+<code>automake</code> 会寻找另一个命名为 <code><var>prog</var>_SOURCES</code> 列出来它的源文件的变量。可能会有不止一个源文件：他们都会被编译和链接在一起。</p>
+<p>当创建一个源码压缩包（不同于构建好的程序）时 Automakealso 也知道需要发布的源文件。因此这个 <code>hello_SOURCES</code> 声明的一个副作用是 <samp>main.c</samp> 将会是 <code>make dist</code> 创建的源码压缩包的一部分。</p>
+<p>最后是一些关于顶层 <samp>Makefile.am</samp> 的解释。
 </p>
 <div class="example">
 <pre class="example">SUBDIRS = src
 dist_doc_DATA = README
 </pre></div>
 
-<p><code>SUBDIRS</code> is a special variable listing all directories that
-<code>make</code> should recurse into before processing the current
-directory.  So this line is responsible for <code>make</code> building
-<samp>src/hello</samp> even though we run it from the top-level.  This line
-also causes <code>make install</code> to install <samp>src/hello</samp> before
-installing <samp>README</samp> (not that this order matters).
-</p>
-<p>The line <code>dist_doc_DATA = README</code> causes <samp>README</samp> to be
-distributed and installed in <var>docdir</var>.  Files listed with the
-<code>_DATA</code> primary are not automatically part of the tarball built
-with <code>make dist</code>, so we add the <code>dist_</code> prefix so they get
+<p><code>SUBDIRS</code> 是一个列出了所有 <code>make</code> 在处理当前目录前应该递归进入的文件夹列表的特殊变量。虽然我们从顶层目录运行 <code>make</code>，这一行让它构建 <samp>src/hello</samp>。这一行同样让 <code>make install</code> 在安装 <samp>README</samp> 之前安装 <samp>src/hello</samp>（虽然这个顺序不重要）。</p>
+<p><code>dist_doc_DATA = README</code> 这一行让 <samp>README</samp> 会被发布并被安装到 <var>docdir</var>。
+Files listed with the
+<code>_DATA</code> 要素列出的文件并不会自动成为用 <code>make dist</code> 构建的源码压缩包的一部分，so we add the <code>dist_</code> prefix so they get
 distributed.  However, for <samp>README</samp> it would not have been
 necessary: <code>automake</code> automatically distributes any
 <samp>README</samp> file it encounters (the list of other files
